# eg0n

./: .bandit.yaml  .black.toml  .djlintrc  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .secrets.baseline  .snyk  .template-modules.yaml  .tfsec.yaml  .yamlfmt  .yamllint.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  upgrade-components.sh
docs/test/: cti-taxii-dafault.json  cti-taxii-init.json
eg0n_portal/: add_data_api.py  add_data_shell.py  db.sqlite3  install.sh  requirements-dev.txt  requirements.txt  test_api.py
eg0n_portal/_templates/: codesnippet_detail.html  event_detail.html  fqdn_detail.html  hash_detail.html  hash_list.html  home.html  ip_list.html  ipadd_detail.html  ipadd_list.html  scoreboard.html  vuln_detail.html  vulns_details.html  vulns_list.html
eg0n_portal/core/: admin.py  models.py  urls.py  views.py
eg0n_portal/eg0n_frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
eg0n_portal/eg0n_portal/: settings.py  urls.py  views.py
eg0n_portal/honeypot/: admin.py  models.py
eg0n_portal/info_gathering/: models.py
eg0n_portal/infosec_dashboard/: models.py
eg0n_portal/ioc_management/: admin.py  apps.py  filters.py  forms.py  models.py  permissions.py  serializers.py  tables.py  urls.py  views.py  viewsHelper.py
eg0n_portal/taxii2/: apps.py
eg0n_portal/tests/: conftest.py  demo_data.py
eg0n_portal/ui/: README.md  apps.py  exception_handler.py  filters.py  forms.py  permissions.py  renderers.py  serializers.py  tables.py  urls.py  views.py
taxii2/: config.json  misp_to_mongodb.py  misp_to_taxii2.py  misp_to_taxii2_db.py  mongodb_del_object.py  mongodb_to_taxii2.py
taxii2/config/: cti-taxii-init.json  ioc-sample.json  (+3 more)
(+215 files in other folders)
